# semester-work-merge-and-insertion-sort-DL

./: CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  insertion_sort_benchmark.cpp  merge_sort_benchmark.cpp
dataset/: generate_csv_dataset.cpp
include/: insertion_sort.hpp  merge_sort.h
src/: insertion_sort.cpp  merge_sort.cpp
